2006-02-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: We might need nanosleep, which is a POSIX IEEE Std
	1003.1b-1993 feature, so tell our system headers about that. Fixes the
	build e.g. on an old SuSE 8.2 distro.

	* NEWS: Fixed release date.

	* doc/alut.html: Fixed broken link.

2006-02-11  Sven Panne  <sven.panne@aedion.de>

	* Released Version 1.0.1, CVS tag is "freealut_1_0_1".

2006-02-07  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Define __NO_CTYPE

2006-02-07  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/freealut.spec: Bumped to 1.0.1, too. We should really
	automate this.

	* NEWS, src/alutUtil.c: When nanosleep returns early due to a signal,
	continue sleeping, otherwise return AL_FALSE from alutSleep.

	* NEWS: Prepared for 1.0.1 release, probably more to come.

	* configure.ac: Use AC_DEFINE instead of specifying preprocessor defines
	by hand. Added a tiny comment.

2006-02-06  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Use modules written for OpenAL, fixing various issues;
	bumped version.
	
	* configure.ac: Added symbol visibility support.

2006-02-06  Sven Panne  <sven.panne@aedion.de>

	* admin/pkgconfig/Makefile.am: Use a more portable way of defining
	pkgconfdir (by Andreas Bierfert).

2006-02-04  Sven Panne  <sven.panne@aedion.de>

	* include/AL/alut.h: Use visibility attribute only when building ALUT
	library.

	* configure.ac: Fixed CR/LF vs. LF issue in configure on Windows. Bumped
	version to 1.0.1.

2005-12-17  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt, include/AL/alut.h: GCC visibility support.

2005-12-16  Sven Panne  <sven.panne@aedion.de>

	* Released Version 1.0.0, CVS tag is "freealut_1_0_0".

	* admin/pkgconfig/freealut-config.in, admin/pkgconfig/freealut.pc.in:
	Fixed copy-n-paste typo. Somehow this fix didn't make into RC2...

2005-12-15  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am, admin/RPM/freealut.spec, configure.ac: Build and install